--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,7 +41,7 @@ body {
 
 .burger-button {
     display: none;
-    position: fixed;
+    /* position: fixed; */
     margin: 10px;
     width: 50px;
     height: 50px;
@@ -51,6 +51,7 @@ body {
     line-height: 50px;
     text-align: center;
     right: 0;
+    z-index: 1;
 }
 
 h2 {
