--- a/css/estilos.css
+++ b/css/estilos.css
@@ -84,19 +84,60 @@ h2:hover {
     position: relative;
 }
 
+.header #menu-h .desplegar {
+    color: #fff;
+    background-color: #419CCA;
+    border-radius: 5px;
+    box-shadow: 2px 2px white;
+    border: 1px solid white;
+    font-size: 1em;
+    padding: 5px;
+    margin: 0;
+}
+
+.header #menu-h .desplegar:hover {
+    color: white;
+    background-color: #088DD1;
+    cursor: pointer;
+}
+
+.header #menu-h .sub-menu {
+    display: none;
+    position: relative;
+    padding-bottom: 500px;
+}
+
+.header #menu-h .sub-menu a {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    color: #fff;
+    background-color: #088DD1;
+    text-decoration: none;
+    /**/
+}
+
+.header #menu-h:hover .sub-menu {
+    float: none;
+    padding: 0 0;
+    text-decoration: none;
+    text-align: left;
+    display: block;
+    z-index: 3;
+}
+
 .header #menu-h {
     text-align: center;
 }
 
 .header #menu-h img {
     align-items: center;
-    width: 70%;
+    width: 35px;
 }
 
 .header #menu-h a {
-    /* color del texto */
-    color: #fff;
-    color: #000;
     display: block;
     border: 1px solid white;
     border-radius: 5px;
