--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ html {
 
 body {
     font-family: 'Roboto mono', monospace;
+    position: fixed;
 }
 
 main {
@@ -31,7 +32,7 @@ main {
 
 .welcome h1 {
     color: #F9A801;
-    font-size: 6rem;
+    font-size: 7rem;
     font-style: italic;
     animation: title forwards ease-out;
     animation-duration: 2s;
@@ -43,9 +44,72 @@ main {
         transform: translateX(1px);
     }
     50% {
-        transform: translateX(250px);
+        transform: translateX(180px);
     }
     100% {
         transform: translateX(1000px);
     }
+}
+
+
+/*footer*/
+
+footer {
+    background-color: #419CCA;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    position: absolute;
+    z-index: 5;
+    text-align: center;
+    margin-top: 100px;
+    padding: 10px 15px;
+    gap: 20px;
+}
+
+footer .info-desa {
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    text-align: center;
+}
+
+footer .info-desa h3 {
+    font-size: 1em;
+    font-style: italic;
+    color: white;
+    margin-left: 80px;
+    /* box-shadow: 2px 2px 2px gray; */
+}
+
+footer .info-desa h3 img {
+    width: 40px;
+}
+
+footer .social-desa {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+footer .social-desa h1 {
+    color: #f3ff3b;
+    font-size: 1.5em;
+    font-style: italic;
+    letter-spacing: 5px;
+    font-weight: bolder;
+}
+
+footer .social-desa a img {
+    width: 50px;
+    margin: 0 20px;
+}
+
+footer .social-desa h3 {
+    font-size: 1em;
+    font-style: italic;
+    color: white;
+}
+
+footer .social-desa h3 img {
+    width: 30px;
+    padding-right: 10px;
 }
