--- a/css/index.css
+++ b/css/index.css
@@ -9,19 +9,20 @@ html {
 
 body {
     font-family: 'Roboto mono', monospace;
-    position: fixed;
+    /* position: fixed; */
 }
 
 main {
     width: 100vw;
+    background: url('../assets/img/street.jpg') no-repeat center center/cover;
+    background-size: 100% 100%;
+    position: relative;
 }
 
 .fondo {
     width: 100%;
     height: 100vh;
-    display: none;
-    background: url('../assets/img/street.jpg') no-repeat center center/cover;
-    position: relative;
+    /* display: none; */
 }
 
 .welcome {
@@ -53,7 +54,7 @@ main {
 }
 
 .redes {
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
     display: flex;
     align-items: flex-end;
     justify-content: center;
