--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ main {
     height: 100vh;
     background: url('../assets/img/street.jpg') no-repeat center center/cover;
     background-size: 100% 100%;
-    position: relative;
+    position: fixed;
 }
 
 .welcome {
