--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ main {
     height: 100%;
     background: url('../assets/img/street.jpg') no-repeat center center/cover;
     background-size: 100% 100%;
-    position: fixed;
+    /* position: fixed; */
 }
 
 
