--- a/css/index.css
+++ b/css/index.css
@@ -43,10 +43,10 @@ body {
 
 main {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background: url('../assets/img/street.jpg') no-repeat center center/cover;
     background-size: 100% 100%;
-    /* position: fixed; */
+    position: fixed;
 }
 
 
@@ -58,8 +58,8 @@ main {
     background-color: rgba(253, 171, 1, .7);
     font-size: 50px;
     margin: 10px;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     line-height: 80px;
     text-align: center;
     top: 15px;
@@ -72,7 +72,6 @@ main {
 
 .burger-button {
     display: block;
-    /* z-index: 1000; */
     cursor: pointer;
 }
 
@@ -110,12 +109,11 @@ main {
     align-items: flex-end;
     justify-content: center;
     height: 100vh;
+    max-width: 425px;
 }
 
 .redes a img {
     width: 100px;
-    min-width: 100px;
-    max-width: 200px;
     padding: 0 50px 30px;
 }
 
