--- a/css/index.css
+++ b/css/index.css
@@ -6,68 +6,25 @@ body {
     width: 100vw;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
-    position: fixed;
+    /* position: fixed; */
 }
 
-.home-main {
-    display: grid;
-    grid-template-columns: 1fr;
-    /* gap: 10px; */
-    z-index: 10;
-}
-
-.home-main .pages {
+.pages {
+    width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr;
-    background-image: url('../assets/img/street.jpg');
-    background-size: cover;
-    justify-items: center;
-    align-items: center;
-    position: relative;
+    grid-template-rows: 65% 35%;
+    background-image: url('../assets/img/street.jpg') no-repeat center center/cover;
 }
 
-.home-main .screen {
-    width: inherit;
-    position: absolute;
-    z-index: 20;
-}
-
-.inicio {
-    width: 100%;
-    height: 100vh;
-    background-color: #19bcec;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: .2fr .7fr .2fr;
-}
-
-.home-main .pages .img {
-    align-self: center;
-    justify-self: center;
-    grid-row: 3;
-}
-
-.home-main .img img {
-    width: 150px;
-}
-
-.home-main .img:hover {
-    background-color: rgba(156, 156, 162, .8);
-    padding: 15px;
-    border-radius: 10px;
-    transition: .7s;
-}
-
-.home-main .pages .home-main-text {
+.pages .home-main-text {
     align-self: center;
     justify-self: center;
     z-index: 100;
     grid-row: 1;
 }
 
-.home-main .pages .home-main-text p {
+.pages .home-main-text p {
     z-index: 30;
     align-items: center;
     font-family: 'Roboto mono', monospace;
@@ -88,22 +45,23 @@ body {
     transition: .5s;
 }
 
-.home-main .pages .home-main-text p span {
+.pages .home-main-text p span {
     color: #f9a801;
     /* transform: scale(.5); */
 }
 
-.home-main .pages .enlaces {
+.pages .enlaces {
     display: grid;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
+    align-items: center;
 }
 
-.home-main .enlaces .home-main-button {
+.pages .enlaces .home-main-button {
     margin: 20px 0;
 }
 
-.home-main .enlaces .home-main-button a {
+.pages .enlaces .home-main-button a {
     border: 2px solid #fff;
     border-radius: 10px;
     font-size: 1.5em;
@@ -119,13 +77,13 @@ body {
     will-change: transform;
 }
 
-.home-main .enlaces .home-main-button a:hover {
+.pages .enlaces .home-main-button a:hover {
     color: #fff;
     background: #f9a801;
     /* background: linear-gradient(207, 8deg, #bababa 17%, #333fff 100%); */
 }
 
-.home-main .enlaces .show {
+.pages .enlaces .show {
     right: 0;
     position: absolute;
     animation-name: show-mensaje;
@@ -133,7 +91,7 @@ body {
     display: none;
 }
 
-.home-main .enlaces .show img {
+.pages .enlaces .show img {
     width: 50px;
     background-color: rgba(172, 167, 166, .7);
     transition: .5s;
@@ -142,7 +100,7 @@ body {
     cursor: pointer;
 }
 
-.home-main .enlaces .show img:hover {
+.pages .enlaces .show img:hover {
     background-color: #f9a801;
 }
 
@@ -157,7 +115,7 @@ body {
     }
 }
 
-.home-main .mensaje {
+.mensaje {
     height: 100vh;
     display: none;
     /* centrar texto */
@@ -167,7 +125,7 @@ body {
     /* animaciones */
 }
 
-.home-main .mensaje p {
+.mensaje p {
     font-style: italic;
     margin: 250px 20px;
 }
