--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,14 @@
 /* inicio de diseño */
 
-html,
 body {
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;
+    width: 100vw; */
     margin: 0;
+    padding: 0;
     font-family: 'Courier New', Courier, monospace;
     /* position: fixed; */
+    background: url('../assets/img/Desarrollador.jpg')no-repeat center center/cover;
+    background-size: 100% 100%;
 }
 
 .pages {
@@ -14,18 +16,23 @@ body {
     height: 100vh;
     display: grid;
     grid-template-rows: 65% 35%;
-    background-image: url('../assets/img/street.jpg') no-repeat center center/cover;
+    position: relative;
+}
+
+.pages .img {
+    background-image: url('../assets/img/whatsapp.png')no-repeat center center/cover;
+    position: absolute;
 }
 
 .pages .home-main-text {
     align-self: center;
     justify-self: center;
-    z-index: 100;
+    /* z-index: 100; */
     grid-row: 1;
 }
 
 .pages .home-main-text p {
-    z-index: 30;
+    /* z-index: 30; */
     align-items: center;
     font-family: 'Roboto mono', monospace;
     font-size: 3em;
@@ -83,6 +90,8 @@ body {
     /* background: linear-gradient(207, 8deg, #bababa 17%, #333fff 100%); */
 }
 
+
+/* 
 .pages .enlaces .show {
     right: 0;
     position: absolute;
@@ -118,17 +127,15 @@ body {
 .mensaje {
     height: 100vh;
     display: none;
-    /* centrar texto */
     display: flex;
     align-items: center;
     justify-content: center;
-    /* animaciones */
 }
 
 .mensaje p {
     font-style: italic;
     margin: 250px 20px;
-}
+} */
 
 @media screen and (min-width: 280px) and (max-width:424px) {
     .home-main .pages .home-main-text {
