--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,19 @@
 /* inicio de diseño */
 
 body {
-    height: 100vh;
-    /* width: 100vw; */
     margin: 0;
-    padding: 0;
+    height: 100vh;
     font-family: 'Courier New', Courier, monospace;
-    /* position: fixed; */
     background: url('../assets/img/street.jpg')no-repeat center center/cover;
     background-size: 100% 100%;
 }
 
 .pages {
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
     display: grid;
-    grid-template-rows: 65% 35%;
-    position: relative;
+    grid-template-rows: 75% 35%;
+    /* position: relative; */
 }
 
 .pages .img {
@@ -59,14 +56,16 @@ body {
 
 .pages .enlaces {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 35% 35%;
     justify-items: center;
     align-items: center;
 }
 
 .pages .enlaces .home-main-button {
-    margin: 10px 0;
-    justify-content: center;
+    /* margin: 10px 0;
+    justify-content: center; */
+    margin: 0;
+    padding: 0;
 }
 
 .pages .enlaces .home-main-button a {
@@ -137,28 +136,9 @@ body {
     margin: 250px 20px;
 } */
 
-@media screen and (min-width: 280px) and (max-width:424px) {
-    .pages .home-main-text {
-        background-color: red;
-        font-size: 10em;
-    }
-    .pages .home-main-text p {
-        font-size: 3em;
-    }
-}
-
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    .pages {
-        /* grid-template-columns: 1fr; */
-    }
-    .pages .home-main-text p {
-        font-size: 2em;
-    }
-    .pages .enlaces {
-        padding-bottom: 100px;
-    }
+@media screen and (min-width: 425px) {
     .pages .enlaces .home-main-button {
-        height: 100px;
+        font-size: 1.5em;
     }
 }
 
