Redistribuyendo enlaces en vista 425px

--- a/css/index.css
+++ b/css/index.css
@@ -133,13 +133,7 @@ body {
     margin: 250px 20px;
 } */
 
-@media screen and (min-width: 425px) {
-    .pages {
-        /* position: fixed; */
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        width: 100%;
-    }
+@media screen and (max-width: 1024px) and (min-width: 768px) {
     .pages .home-main-text {
         margin-top: 300px;
     }
@@ -150,11 +144,13 @@ body {
         font-size: 2em;
         width: 250px;
     }
-    .pages .enlaces {
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        margin-top: 300px;
-    }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {}
+@media screen and (min-width: 425px) {
+    .pages .home-main-text {
+        margin-top: 100px;
+    }
+    .pages .enlaces {
+        margin-top: 200px;
+    }
+}
