Centrando y colocando ancho

--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 425px) {
+    .pages {
+        position: fixed;
+        width: 100%;
+    }
     .pages .home-main-text {
         margin-top: 100px;
     }
