--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-rows: .2fr 1fr;
-    /* position: relative; */
+    position: fixed;
 }
 
 .pages .home-main-text {
