--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 425px) {
     .pages {
-        position: fixed;
-        width: 100%;
+        height: 100vh;
+        background: url('../assets/img/street.jpg')no-repeat center center/cover;
     }
     .pages .home-main-text {
         margin-top: 100px;
