--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -1,8 +1,13 @@
 @media screen and (min-width: 425px) {
-    .pages {
-        height: 100vh;
+    body {
+        margin: 0;
+        /* height: 100%;
+        width: 100%; */
         background: url('../assets/img/street.jpg')no-repeat center center/cover;
+        position: fixed;
+        background-attachment: fixed;
     }
+    /* .pages {}
     .pages .home-main-text {
         margin-top: 100px;
     }
@@ -11,5 +16,5 @@
     }
     .pages .enlaces .home-main-button a {
         font-size: 1.5em;
-    }
+    } */
 }
