--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -3,18 +3,82 @@
         margin: 0;
         /* height: 100%;
         width: 100%; */
-        background: url('../assets/img/street.jpg')no-repeat center center/cover;
+        /* background: url('../assets/img/street.jpg')no-repeat center center/cover; */
         position: fixed;
         background-attachment: fixed;
+        position: relative;
     }
-    /* .pages {}
+    .pages {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        width: 100vw;
+        height: 100vh;
+    }
     .pages .home-main-text {
-        margin-top: 100px;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        grid-row: 1;
+    }
+    .pages .home-main-text p {
+        align-items: center;
+        font-family: 'Roboto mono', monospace;
+        font-size: 4.5rem;
+        font-weight: 700px;
+        letter-spacing: 10px;
+        color: #fff;
+        background-color: rgba(187, 170, 187, .1);
+        border-radius: 20px;
+        text-shadow: 3px 3px 2px #baba;
+        text-align: center;
+        padding: 10px;
+        margin: 30px 0;
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+        transition: .5s;
+        min-width: 400px;
+        max-width: 500px;
+    }
+    .pages .home-main-text p span {
+        color: #f9a801;
     }
     .pages .enlaces {
-        margin-top: 200px;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        /* grid-row: 2; */
+        align-self: center;
+    }
+    .pages .enlaces {
+        display: grid;
+        grid-template-rows: 100px 100px;
+        align-items: center;
+        justify-content: center;
+    }
+    .pages .enlaces .home-main-button {
+        display: flex;
+        width: 200px;
+        height: 100px;
+        align-items: center;
+        justify-content: center;
     }
     .pages .enlaces .home-main-button a {
-        font-size: 1.5em;
-    } */
+        border: 2px solid #fff;
+        border-radius: 10px;
+        font-size: 1em;
+        padding: .5em .5em;
+        line-height: 40px;
+        text-align: center;
+        text-decoration: none;
+        background-color: rgb(102, 95, 95);
+        color: #fff;
+        cursor: pointer;
+        outline: none;
+        transition: .5s;
+    }
+    .pages .enlaces .home-main-button a:hover {
+        color: #fff;
+        background: #f9a801;
+        /* background: linear-gradient(207, 8deg, #bababa 17%, #333fff 100%); */
+    }
 }
