Con position fixed

--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -5,8 +5,7 @@
         width: 100%; */
         /* background: url('../assets/img/street.jpg')no-repeat center center/cover; */
         position: fixed;
-        background-attachment: fixed;
-        position: relative;
+        /* background-attachment: fixed; */
     }
     .pages {
         display: grid;
