--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -1,17 +1,14 @@
 @media screen and (min-width: 425px) {
     body {
         margin: 0;
-        /* height: 100%;
-        width: 100%; */
-        /* background: url('../assets/img/street.jpg')no-repeat center center/cover; */
-        position: fixed;
-        /* background-attachment: fixed; */
     }
     .pages {
         display: grid;
         grid-template-rows: 1fr 1fr;
         width: 100vw;
         height: 100vh;
+        position: fixed;
+        background: url('../assets/img/street.jpg')no-repeat center center/cover;
     }
     .pages .home-main-text {
         display: grid;
