--- a/mediaquery/media-425.css
+++ b/mediaquery/media-425.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 425px) {
     body {
         margin: 0;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Roboto mono', monospace;
     }
     .pages {
         display: grid;
@@ -21,12 +21,11 @@
     }
     .pages .home-main-text p {
         align-items: center;
-        font-family: 'Roboto mono', monospace;
         font-size: 4.5rem;
         font-weight: 700px;
         letter-spacing: 10px;
         color: #fff;
-        background-color: rgba(187, 170, 187, .1);
+        /* background-color: rgba(187, 170, 187, .1); */
         border-radius: 20px;
         text-shadow: 3px 3px 2px #baba;
         text-align: center;
@@ -59,7 +58,7 @@
             transform: translateX(-20px);
         }
         100% {
-            transform: translateX(45px);
+            transform: translateX(20px);
         }
     }
     .pages .home-main-text p span {
@@ -83,7 +82,7 @@
     }
     .pages .enlaces .home-main-button a {
         height: 60px;
-        width: 150px;
+        width: 250px;
         font-size: 2em;
         font-weight: bolder;
         padding: 10px;
