--- a/css/store.css
+++ b/css/store.css
@@ -56,17 +56,18 @@ body {
 }
 
 h2 {
+    font-size: 1.1rem;
     font-weight: bolder;
     color: #419CCA;
     border: 1px solid #419CCA;
-    width: 350px;
+    width: 250px;
     /* margin: 20px auto; */
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     padding: 15px;
     border-radius: 10px;
-    transition: .8s;
+    transition: .5s;
 }
 
 h2:hover {
@@ -278,7 +279,8 @@ h2:hover {
 .contenido .presentacion {
     justify-content: center;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
+    height: 340px;
     margin: 0 auto;
     border: 2px solid #419CCA;
     object-fit: cover;
@@ -290,7 +292,7 @@ h2:hover {
 
 .contenido .presentacion .p1 {
     width: 100%;
-    height: 400px;
+    height: inherit;
     background-image: url('../assets/img/presentacion/p1.gif');
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -298,7 +300,7 @@ h2:hover {
 
 .contenido .presentacion .p2 {
     width: 100%;
-    height: 400px;
+    height: inherit;
     display: none;
     background-image: url('../assets/img/presentacion/p1.gif');
     background-size: 100% 100%;
@@ -307,7 +309,7 @@ h2:hover {
 
 .contenido .presentacion .p3 {
     width: 100%;
-    height: 400px;
+    height: inherit;
     display: none;
     background-image: url('../assets/img/presentacion/p1.gif');
     background-size: 100% 100%;
@@ -355,6 +357,7 @@ h2:hover {
     list-style: none;
     width: 30px;
     height: 30px;
+    margin-left: 30px;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -369,6 +372,7 @@ h2:hover {
 .contenido .mi_trabajo .formateo {
     position: relative;
     text-align: center;
+    margin: 0 50px;
 }
 
 .contenido .mi_trabajo .formateo .title {
@@ -605,6 +609,7 @@ h2:hover {
 .contenido .accesorios .celulares {
     height: 365px;
     padding: 10px;
+    margin: 0 50px;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: 1fr;
@@ -616,15 +621,16 @@ h2:hover {
     display: grid;
     grid-template-rows: 40px 200px 60px;
     align-items: center;
-    width: 250px;
-    margin: auto 15px;
+    width: 225px;
+    margin: auto 5px;
     border: 1px solid #bababa;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 7px;
     box-shadow: 5px 5px 5px #baba;
 }
 
 .contenido .accesorios .celulares .accesorio-celular h3 {
+    color: #419CCA;
     line-height: 40px;
     height: 40px;
     font-size: 1em;
@@ -672,6 +678,7 @@ h2:hover {
 .contenido .accesorios .pc {
     height: 365px;
     padding: 10px;
+    margin: 0 50px;
     display: grid;
     grid-template-columns: repeat(15, 1fr);
     grid-template-rows: 1fr;
@@ -684,12 +691,11 @@ h2:hover {
     display: grid;
     grid-template-rows: 40px 200px 60px;
     align-items: center;
-    gap: 0 30px;
-    width: 250px;
+    width: 225px;
     margin: auto 10px;
     border: 1px solid #bababa;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 7px;
     box-shadow: 5px 5px 5px #baba;
 }
 
